--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,44 @@
 .read-the-docs {
   color: #888;
 }
+
+br {
+  display: none;
+  
+}
+@media (min-width: 600px) {
+  br {
+    display: initial;
+  }
+}
+@media (min-width: 600px) {
+  .card {
+    display: flex;
+    justify-content: space-between;
+  }
+  .card > div {
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 600px) {
+  .card > div {
+    margin: 0;
+  }
+}
+@media (min-width: 600px) {
+  .card > div:nth-of-type(2) {
+    margin-left: 1em;
+  }
+}
+@media (min-width: 600px) {
+  .card > div:nth-of-type(3) {
+    margin-left: 1em;
+  }
+}
+@media (min-width: 600px) {
+  .card > div:nth-of-type(4) {
+    margin-left: 1em;
+  }
+}
